# hexanoise

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
CL/: cl.hpp
debian/: changelog  control  copyright  libhexanoise1-dev.install  libhexanoise1.install
debian/source/: format
doc/doxygen/: mainpage.md
hexanoise/: CMakeLists.txt  analysis.cpp  analysis.hpp  ast.hpp  cl.hpp  generator_context.cpp  generator_context.hpp  generator_i.hpp  generator_opencl.cpp  generator_opencl.hpp  generator_slowinterpreter.cpp  generator_slowinterpreter.hpp  global_variables_i.hpp  node.cpp  node.hpp  opencl.cl  opencl_prelude.hpp  parser.y  simple_global_variables.hpp  tokens.l  version.hpp.in
install/: FindHexanoise.cmake  hexanoise.pc.in
unit_tests/: CMakeLists.txt  tests  unit_tests.cpp
util/: CMakeLists.txt  hndl2png.cpp
win32/: README.md  parser.cpp  parser.hpp  tokens.cpp  tokens.hpp
